--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
   --orange-accent: #ff8200;
   --dark-grey: #333;
   --background-light-grey: #f5f5f5;
+  --salmon-pink: #f7baa6;
+  --pale-blue: #97d3d1;
   --font-family-body: 'Bitter', serif;
   --font-family-header: 'Bai Jamjuree', sans-serif;
   --font-size-base: 16px;
@@ -23,9 +25,12 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: var(--background-light-grey);
+  background-color: #f5f5f5;
   line-height: 1.8;
-  width: 100vw;
+  font-size: 20px;
+  background: linear-gradient(180deg, var(--background-light-grey), var(--background-light-grey), var(--background-light-grey), #dcff4f);
+  margin-left: 2.5%;
+  margin-right: 2.5%;
 }
 
 h2 {
@@ -39,7 +44,7 @@ header {
   position: relative;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
   padding: 20px 55px;
   display: flex;
@@ -73,7 +78,6 @@ header {
   display: flex;
   gap: 45px;
   align-items: center;
-  background-color: #f5f5f5;
 }
 
 .menu-item {
@@ -91,19 +95,6 @@ header {
 .menu-item img {
   height: 20px;
   width: 20px;
-  transition: all 0.3s ease; /* Smooth transition */
-}
-
-.menu-item:hover img[src="assets/images/shapes/projects.png"] {
-  content: url('../assets/images/shapes/projects-selected.png');
-}
-
-.menu-item:hover img[src="assets/images/shapes/stories.png"] {
-  content: url('../assets/images/shapes/stories-selected.png');
-}
-
-.menu-item:hover img[src="assets/images/shapes/about.png"] {
-  content: url('../assets/images/shapes/about-selected.png');
 }
 
 .menu-item:hover {
@@ -122,15 +113,17 @@ main {
   flex-direction: row;
   border-bottom: 1px solid #000;
   min-height: calc(100vh - 96px);
+  width: 100%;
 }
 
 .hero-half {
   flex: 1;
+  max-width: 50%;
 }
 
-.hero-half:not(:last-child) {
-  border-right: 1px solid #000; /* Creates the border */
-}
+/*.hero-half:not(:last-child) {
+  border-right: 1px solid #000;  Creates the border 
+}*/
 
 .left {
   flex: 1;
@@ -140,13 +133,24 @@ main {
   align-items: flex-start;
   justify-content: center;
   line-height: 1;
-  padding-left: 2%;
-  padding-bottom: 5%;
+  padding: 2%;
+}
+
+.left-dp {
+  flex: 1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  line-height: 1;
+  padding-bottom: 3%;
+  padding: 2%;
 }
 
 p {
-  font-size: 20px;
   line-height: 1.5;
+  z-index: 100;
 }
 
 .animated-text-container {
@@ -166,6 +170,7 @@ p {
   height: 100%;
   line-height: 1; /* Ensure consistent line height */
   min-height: 6rem; /* Set a minimum height to prevent shifting */
+  z-index: 100;
 }
 
 .right {
@@ -177,17 +182,25 @@ p {
   height: calc(100vh - 96px); /* Make the container fill its parent */
 }
 
+.landing-hero.hero-half.right {
+  position: absolute;
+  right: 0;
+}
+
 /* Overlay the paragraph text */
 .hero-half.right p {
   position: absolute;
   transform: translate(-50%, -50%);
   font-size: 16px;
   z-index: 10;
-  background-color: rgba(255, 255, 255, 0.8); /* Optional: Add a semi-transparent background */
-  padding: 10px; /* Optional: Add some padding */
+  background-color: rgba(255, 255, 255, 0.9); /* Optional: Add a semi-transparent background */
+  padding: 20px; /* Optional: Add some padding */
   text-align: center;
   transition: opacity 1.5s ease; /* Smooth transition for hiding */
   opacity: 1;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.025);
+  width: 20%;
+  pointer-events: none;
 }
 
 .hero-half.right p.hidden {
@@ -196,18 +209,18 @@ p {
 }
 
 .msg-1 {
-  top: 25%;
-  left: 75%;
+  top: 30%;
+  left: 90%;
 }
 
 .msg-2 {
   top: 50%;
-  left: 75%;
+  left: 90%;
 }
 
 .msg-3 {
-  top: 75%;
-  left: 75%;
+  top: 70%;
+  left: 90%;
 }
 
 .node-map {
@@ -224,6 +237,21 @@ line {
   stroke-width: 2px;
 }
 
+/* ----------------- INTERSECTION OBSERVER ----------------- */
+
+.hidden-obs {
+  opacity: 0;
+  pointer-events: none;
+  transform: translateX(-35px);
+  transition: opacity 2s ease, transform 1.5s ease;
+}
+
+.show-obs {
+  opacity: 1;
+  pointer-events: all;
+  transform: translateX(0);
+}
+
 /* ----------------- THE PROBLEM ----------------- */
 
 .preamble-hero {
@@ -237,6 +265,13 @@ line {
   display: flex;
   flex-direction: row;
   border-bottom: 1px solid #000;
+}
+
+svg {
+  background: #d0f0ff;
+  border: 2px solid #333;
+  height: 100%;
+  width: 100%;
 }
 
 /* ----------------- OUR APPROACH ----------------- */
@@ -270,8 +305,7 @@ line {
   flex-direction: row;
   align-items: center;
   justify-items: center;
-  border-bottom: 1px solid #000;
-  min-height: 50vh;
+  min-height: 75vh;
 }
 
 .current-projects-text-container {
@@ -299,6 +333,8 @@ line {
   padding: 20px; /* Space inside the footer */
   font-family: 'Bitter', serif;
   font-size: 14px;
+  border-top: 1px solid #333;
+  min-width: 100vw;
 }
 
 .site-footer p {
@@ -328,6 +364,13 @@ line {
   max-width: 20px; /* Ensure it doesn't overflow */
   width: auto;
   gap: 10px;
+}
+
+.logo-footer span {
+  font-weight: bold;
+  font-size: 20px;
+  text-align: left;
+  line-height: 1;
 }
 
 .logo-footer img {
